--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,31 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
     defaultConfig {
         applicationId "com.infowithvijay.triviaquizapp2"
         minSdkVersion 25
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        dataBinding {
+            enabled  true
+        }
+    }
+    buildFeatures {
+        viewBinding true
+        dataBinding true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        }
     }
-}
+
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -27,5 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation "androidx.preference:preference:1.1.0"
-
+    implementation ("com.airbnb.android:lottie:6.1.0")
 }
