--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ android {
     defaultConfig {
         applicationId "com.infowithvijay.triviaquizapp2"
         minSdkVersion 25
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -32,5 +33,8 @@ dependencies {
 
     implementation "androidx.preference:preference:1.1.0"
 
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:28.2.1'
 
 }
